<resources>
    <string name="app_name">Bao Game</string>
    <string name="player_2_0">Player 2: 0</string>
    <string name="player_1_0">Player 1: 0</string>
    <string name="player_1_s_turn">Player 1\'s Turn</string>
    <string name="restart_game">Restart Game</string>
    <string name="help">Help</string>
    <string name="_4">4</string>
    <string name="how_to_play_bao">How to Play Bao</string>
    <string name="helpme">1. Each player has 8 pits.\n2. Click on a pit to sow seeds.\n3. Capture seeds from the opponent\'s pits.\n4. The player with the most seeds wins!</string>
    <string name="close">Close</string>
</resources>